--- a/PanelAdmin.es-CO.resx
+++ b/PanelAdmin.es-CO.resx
@@ -118,47 +118,50 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="consultarUsuariosToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>195, 24</value>
+  <data name="consultarMadresComunitariasToolStripMenuItem.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 10.8pt</value>
   </data>
-  <data name="madreComunitariaToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>97, 29</value>
-  </data>
-  <data name="consultarJardinesToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>191, 24</value>
-  </data>
-  <data name="jardinToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>93, 29</value>
-  </data>
-  <data name="consultarNiñosToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>177, 24</value>
-  </data>
-  <data name="niñosToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>73, 29</value>
+  <data name="consultarMadresComunitariasToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>348, 30</value>
   </data>
   <data name="consultarMadresComunitariasToolStripMenuItem.Text" xml:space="preserve">
     <value>Consultar Madres Comunitarias</value>
   </data>
+  <data name="madresComunitariasToolStripMenuItem.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 13.8pt</value>
+  </data>
+  <data name="madresComunitariasToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>246, 35</value>
+  </data>
   <data name="madresComunitariasToolStripMenuItem.Text" xml:space="preserve">
     <value>Madres Comunitarias</value>
   </data>
+  <data name="consultarAcudientesToolStripMenuItem.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 10.8pt</value>
+  </data>
+  <data name="consultarAcudientesToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>267, 30</value>
+  </data>
   <data name="consultarAcudientesToolStripMenuItem.Text" xml:space="preserve">
     <value>Consultar Acudientes</value>
+  </data>
+  <data name="acudientesToolStripMenuItem.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 13.8pt</value>
+  </data>
+  <data name="acudientesToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>142, 35</value>
   </data>
   <data name="acudientesToolStripMenuItem.Text" xml:space="preserve">
     <value>Acudientes</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="menuStrip1.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 2, 0, 2</value>
+    <value>5, 2, 0, 2</value>
   </data>
   <data name="menuStrip1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>599, 33</value>
+    <value>709, 39</value>
   </data>
-  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>6, 13</value>
-  </data>
-  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>600, 366</value>
+  <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>3, 2, 3, 2</value>
   </data>
 </root>
